# test-skbuild-cibuildwheel

./: CMakeLists.txt  pyproject.toml  vcpkg.json
.github/actions/setup-vcpkg/: action.yml
.github/actions/setup-vcpkg/overlay/duckdb/: portfile.cmake  vcpkg.json
.github/workflows/: skbuild.yml
example/: CMakeLists.txt  example.c  example.cpp  example.h  example.i
