[build-system]
requires = ["scikit-build-core", "swig"]
build-backend = "scikit_build_core.build"

[project]
name = "example"
version = "0.0.1"

[tool.scikit-build]
cmake.verbose = true
wheel.packages = []
wheel.py-api = "py3"

[tool.cibuildwheel]
build = [
  "cp38-manylinux_x86_64",
  "cp38-win_amd64",
  "cp38-macosx_x86_64",
]
build-verbosity = 1
test-command = "python -c \"import example; print(example.square(2))\""

[tool.cibuildwheel.windows]
before-all = "pip install delvewheel" # build-system.requires is unavailable in the build venv
repair-wheel-command = "delvewheel repair --ignore-in-wheel -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
